--- a/html/style.css
+++ b/html/style.css
@@ -2918,3 +2918,143 @@ hr.dotted-hr {
     border-top: 1px solid #6c6c6c;
     padding-top: 20px;
 }
+
+.p-box.right-checkbox {
+    position: relative;
+}
+.p-box.right-checkbox input[type="checkbox"] {
+    position: absolute;
+    right: 20px !important;
+    top: 20px !important;
+    display: inline !important;
+    width: auto;
+}
+
+.b-box {
+    border-radius: 5px;
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.08);
+    background-color: #ffffff;
+    border: 1px solid #cbcbcb;
+    padding: 10px;
+}
+
+.subscription .client-box .client-box-body label {
+    font-size: 22px;
+    color: #3b3b3b;
+}
+
+a.btn-new-1 {
+    background-image: none !important;
+    padding: 5px 20px !important;
+}
+
+.p-box.center-checkbox {
+    position: relative;
+}
+
+.p-box.center-checkbox input[type="checkbox"] {
+    position: absolute;
+    width: auto;
+    top: 216px;
+    left: 50%;
+}
+
+.p-box.p-box-normal{
+    border: 5px solid #dbdbdb;
+}
+
+.p-box.p-box-normal.selected{
+    border: 5px solid #cfad42;
+}
+
+.btn-green-1 {
+    border-radius: 27px;
+    background-color: #06c486;
+    font-size: 21px;
+    line-height: 29px;
+    color: #ffffff;
+    font-weight: 500;
+    font-family: "Poppins";
+    width: 100%;
+    padding: 12px;
+}
+
+.member-table{
+    width: 100%;
+}
+
+.member-table th{
+    font-size: 19px;
+    line-height: 29px;
+    color: #3f3f3f;
+    font-weight: 700;
+    font-family: "Poppins";
+    border: 1px solid #CCC;
+    padding: 10px;
+}
+
+.member-table td {
+    font-size: 20px;
+    line-height: 35px;
+    color: #3f3f3f;
+    font-weight: 500;
+    font-family: "Poppins";
+    border: 1px solid #CCC;
+    padding: 10px;
+}
+
+.client-layer .client-content.extended.new {
+    max-height: max-content;
+    overflow: hidden;
+    border-radius: 15px;
+}
+
+.client-layer .client-title.new {
+    background-color: #ededed;
+    border-radius: 15px 15px 0 0;
+}
+
+.trans-bg {
+    border-radius: 15px;
+    filter: drop-shadow(0 0 17.5px rgba(0,0,0,0.01));
+    background-color: rgba(0,0,0,0.1607843137254902);
+    padding: 20px;
+}
+
+.trans-bg h4{
+    font-size: 34px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Poppins";
+    text-align: center;
+}
+
+.trans-bg p{
+    font-size: 19px;
+    color: #ffffff;
+    font-weight: 400;
+    font-style: italic;
+    font-family: "Poppins";
+    text-align: center;
+}
+
+.trans-bg a.btn.btn-green-small {
+    border-radius: 15px;
+    background-color: #06c486;
+    font-size: 26px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Poppins";
+    text-align: center;
+    margin-bottom: 15px;
+    width: 100%;
+}
+
+.p-box.center-checkbox.new input[type="checkbox"] {
+    top: 186px;
+    left: 49%;
+}
+
+.q-page.home.org-page .content {
+    background-image: url("./img/org-bg.jpg");
+}
